# pokebargains

./: Cargo.toml  Config.toml  Dockerfile  schema.sql  scratch.txt
src/: common.rs  config.rs  items.rs  main.rs  templates.rs
static/styles/: site.css
templates/: base_layout.html.tera  default_layout.html.tera  index.html.tera  item.html.tera  navigation.html.tera  pages.toml
