[package]
name = "pokebargainsjapan"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.103.0"
confy = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
indexmap = "2.9.0"
rocket = {  version = "0.5.1" }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8.23", features = ["preserve_order"] }